crates/service/tests/diagnostics/snapshots/features__diagnostics__lane__load_store.snap
---
source: crates/service/tests/diagnostics/lane.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 32
        },
        "end": {
          "line": 4,
          "character": 34
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 16"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 31
        },
        "end": {
          "line": 8,
          "character": 32
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 8"
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 31
        },
        "end": {
          "line": 12,
          "character": 32
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 16,
          "character": 31
        },
        "end": {
          "line": 16,
          "character": 32
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    },
    {
      "range": {
        "start": {
          "line": 20,
          "character": 31
        },
        "end": {
          "line": 20,
          "character": 33
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 16"
    },
    {
      "range": {
        "start": {
          "line": 24,
          "character": 32
        },
        "end": {
          "line": 24,
          "character": 33
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 8"
    },
    {
      "range": {
        "start": {
          "line": 28,
          "character": 32
        },
        "end": {
          "line": 28,
          "character": 33
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 32,
          "character": 34
        },
        "end": {
          "line": 32,
          "character": 35
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    }
  ]
}
