crates/service/tests/diagnostics/snapshots/features__diagnostics__lane__simd.snap
---
source: crates/service/tests/diagnostics/lane.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 43
        },
        "end": {
          "line": 2,
          "character": 45
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 16"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 43
        },
        "end": {
          "line": 3,
          "character": 46
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 16"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 43
        },
        "end": {
          "line": 4,
          "character": 45
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 16"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 43
        },
        "end": {
          "line": 5,
          "character": 46
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 16"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 43
        },
        "end": {
          "line": 6,
          "character": 44
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 8"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 43
        },
        "end": {
          "line": 7,
          "character": 46
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 8"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 43
        },
        "end": {
          "line": 8,
          "character": 44
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 8"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 43
        },
        "end": {
          "line": 9,
          "character": 46
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 8"
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 41
        },
        "end": {
          "line": 10,
          "character": 42
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 11,
          "character": 41
        },
        "end": {
          "line": 11,
          "character": 44
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 41
        },
        "end": {
          "line": 12,
          "character": 42
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 41
        },
        "end": {
          "line": 13,
          "character": 44
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 42
        },
        "end": {
          "line": 14,
          "character": 44
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 16"
    },
    {
      "range": {
        "start": {
          "line": 15,
          "character": 42
        },
        "end": {
          "line": 15,
          "character": 45
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 16"
    },
    {
      "range": {
        "start": {
          "line": 16,
          "character": 42
        },
        "end": {
          "line": 16,
          "character": 44
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 8"
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 42
        },
        "end": {
          "line": 17,
          "character": 45
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 8"
    },
    {
      "range": {
        "start": {
          "line": 18,
          "character": 42
        },
        "end": {
          "line": 18,
          "character": 43
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 19,
          "character": 42
        },
        "end": {
          "line": 19,
          "character": 45
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 20,
          "character": 42
        },
        "end": {
          "line": 20,
          "character": 43
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 21,
          "character": 42
        },
        "end": {
          "line": 21,
          "character": 45
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 4"
    },
    {
      "range": {
        "start": {
          "line": 22,
          "character": 41
        },
        "end": {
          "line": 22,
          "character": 42
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    },
    {
      "range": {
        "start": {
          "line": 23,
          "character": 41
        },
        "end": {
          "line": 23,
          "character": 44
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    },
    {
      "range": {
        "start": {
          "line": 24,
          "character": 41
        },
        "end": {
          "line": 24,
          "character": 42
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    },
    {
      "range": {
        "start": {
          "line": 25,
          "character": 41
        },
        "end": {
          "line": 25,
          "character": 44
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    },
    {
      "range": {
        "start": {
          "line": 26,
          "character": 42
        },
        "end": {
          "line": 26,
          "character": 43
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 42
        },
        "end": {
          "line": 27,
          "character": 45
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    },
    {
      "range": {
        "start": {
          "line": 28,
          "character": 42
        },
        "end": {
          "line": 28,
          "character": 43
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    },
    {
      "range": {
        "start": {
          "line": 29,
          "character": 42
        },
        "end": {
          "line": 29,
          "character": 45
        }
      },
      "severity": 1,
      "code": "lane",
      "source": "wat",
      "message": "lane index must be less than 2"
    }
  ]
}
